Corrigindo e adicionando novas funcionalidades